Tag docker images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   movie_service:
+    image: kasyc/jenkins-devops-exam:movie.latest
     build: ./movie-service
     command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
     volumes:
@@ -24,6 +25,7 @@ services:
       - POSTGRES_DB=movie_db_dev
 
   cast_service:
+    image: kasyc/jenkins-devops-exam:cast.latest
     build: ./cast-service
     command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
     volumes:
